# sampaio-hoog-website

./: .gitignore  manage.py  pyproject.toml
core/: urls.py  views.py
shwebsite/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home copy.html  home.html
