[project]
name = "site-django"
version = "0.1.0"
description = "site para sampaio e hoog"
authors = [
    {name = "gabriel prata"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-allauth (>=65.12.1,<66.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-quill-editor (>=0.1.42,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
